public-api/build-stage.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    note: This is STAGE deployment
  labels:
    app: public-api
    team: devops
  name: public-stage
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    note: This is STAGE deployment
  labels:
    app: public-api
    team: devops
  name: public-api
  namespace: public-stage
spec:
  ports:
  - name: public-api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: public-api
    team: devops
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    note: This is STAGE deployment
  labels:
    app: public-api
    team: devops
  name: public-api
  namespace: public-stage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: public-api
      team: devops
  template:
    metadata:
      annotations:
        note: This is STAGE deployment
      labels:
        app: public-api
        team: devops
      name: public-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: cm-private-api
        image: emoralesc/kubelabs_publicapi:latest
        imagePullPolicy: Always
        name: public-api
        ports:
        - containerPort: 3000
          name: public-api
        resources:
          limits:
            cpu: 20m
            memory: 200Mi
          requests:
            cpu: 10m
            memory: 50Mi
      imagePullSecrets:
      - name: regcred
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    note: This is STAGE deployment
  labels:
    app: public-api
    team: devops
  name: public-api
  namespace: public-stage
spec:
  rules:
  - host: api-stage.emoralesc.kubelabs.dev
    http:
      paths:
      - backend:
          service:
            name: public-api
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: public-api
            port:
              number: 3000
        path: /graphql
        pathType: Prefix
